--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
          </div>
          <ul>
             <li>
-               <a href="https://guilhermehenn.github.io/login-00/" target="_blank">Project Login</a>
+               <a href="https://guilhermehenn.github.io/login/" target="_blank">Project Login</a>
             </li>
             <li>
                <a href="https://guilhermehenn.github.io/habits/" target="_blank">Project Habits</a>
