--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                <a href="https://guilhermehenn.github.io/habits/" target="_blank">Project Habits</a>
             </li>
             <li>
-               <a href="https://guilhermehenn.github.io/" target="_blank">Project Portfolio</a>
+               <a href="https://guilhermehenn.github.io/credit-card/" target="_blank">Project Credit Card</a>
             </li>
             <li>
                <a href="https://guilhermehenn.github.io/cup-calendar/" target="_blank">Project Cup Calendar</a>
